--- a/src/assets/styles/download/monogramcreator.css
+++ b/src/assets/styles/download/monogramcreator.css
@@ -45,8 +45,6 @@
 /* Responsive Menu Button */
 .menu-button_monogram {
   display: none;
-  background-color: #1a2456;
-  color: white;
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
@@ -55,9 +53,7 @@
 }
 
 .menu-button_monogram.open {
-  background-color: #efc2b3;
   color: #1a2456;
-
 }
 
 .links-container_monogram.show {
@@ -75,7 +71,7 @@
   padding: 100px 20px;
   text-align: left;
   color: #1a2456;
-  height: 550px;
+  height: 600px;
   border-radius: 10px;
 }
 
@@ -89,6 +85,7 @@
 .content-box_monogram p {
   font-size: 1rem;
   color: #1a2456;
+  margin-top: 1rem;
   letter-spacing: 1px;
   margin-bottom: 15px;
 }
@@ -129,9 +126,7 @@ form input {
   margin: 0 10px;
 }
 
-.download-button:hover {
-  color: #efc2b3;
-}
+.download-button:hover {}
 
 .icon_monogram {
   font-size: 5rem;
@@ -144,7 +139,7 @@ form input {
 
 .release-notes-link {
   display: block;
-  margin-top: 15px;
+  margin-top: 35px;
   text-align: center;
   color: #1a2456;
   text-decoration: underline;
@@ -157,29 +152,72 @@ form input {
 
 .icon-section {
   display: flex;
-  gap: 6rem;
+  gap: 9rem;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  /* margin-bottom: 2rem; */
 }
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .links-container_monogram {
+  /* .links-container_monogram {
     display: none;
-  }
+  } */
 
   .menu-button_monogram {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+
+  .menu_icon_monogram {
+    font-size: 2rem;
   }
 
   .content-box_monogram {
     width: 80%;
   }
 
-  .download-section {
-    flex-direction: column;
+  .links-container_monogram {
+    display: none;
+    gap: 1rem;
+    border-top: 2px solid #1a2456;
+    border-bottom: 2px solid #1a2456;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
   }
+
+
+
+  .line_monogram {
+    display: none;
+  }
+
+  .link_monogram {
+    font-size: 1rem;
+  }
+
+  .content_monogram {
+    width: 100%;
+  }
+
+  .content-box_monogram {
+    width: 80%;
+  }
+
+  .download-button {
+    border-radius: 20px;
+    padding: 10px 15px;
+  }
+
+  /* .download-section {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+  } */
 
   .spacer {
     width: 0;
@@ -188,12 +226,24 @@ form input {
 }
 
 @media (max-width: 425px) {
+  .content_monogram {
+    width: 100%;
+  }
+
   .content-box_monogram {
-    width: 90%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
 
   .content-box_monogram h2 {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
+    padding-bottom: 1rem;
+  }
+
+  .content-box_monogram p {
+    font-size: 0.9rem;
+    text-align: center;
   }
 
   .link_monogram {
