--- a/src/assets/styles/HowItWork/lending.css
+++ b/src/assets/styles/HowItWork/lending.css
@@ -2,6 +2,7 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #1a2456;
   margin: 0;
+
   padding: 0;
 }
 
@@ -144,6 +145,10 @@
 
 /* Small devices (mobile phones in landscape) */
 @media (max-width: 768px) {
+  .landing-page {
+    overflow: hidden;
+  }
+
   .steps-row {
     justify-content: center;
   }
@@ -187,14 +192,23 @@
 
   .step-content h3 {
     font-size: 1.2rem;
+
+  }
+
+  .buttons {
+    margin-top: 0;
   }
 
   .step-content p {
     font-size: 0.9rem;
   }
 
+  .mac {
+    margin-top: 30px;
+  }
+
   .btn {
-    padding: 8px 12px;
+    padding: 0px 12px;
   }
 }
 
