--- a/src/assets/styles/blog/blogtop.css
+++ b/src/assets/styles/blog/blogtop.css
@@ -1,21 +1,37 @@
 .monogram-press-container {
-  background-image: url('../../images//blog//topimage.jpg');
+  position: relative;
+  background-image: url('../../images//blog/blog_top.webp');
   /* Replace with your image URL */
   background-size: cover;
   background-position: center;
-  height: 40vh;
+  height: 70vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+}
+
+/* Dark overlay using ::before */
+.monogram-press-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Adjust opacity to control darkness */
+  z-index: 1;
+  /* Ensure it stays behind the text */
 }
 
 .monogram-press-content {
+  position: relative;
+  z-index: 2;
+  /* Brings text in front of the overlay */
   text-align: center;
-  color: black;
-  font-weight: 900;
-  /* Add a semi-transparent background for better readability */
+  color: white;
+  /* Optional: Adds a semi-transparent background for better readability */
   padding: 20px;
   border-radius: 10px;
 }
@@ -23,32 +39,40 @@
 .monogram-press-content h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
 .monogram-press-content p {
   font-size: 1.2rem;
-  max-width: 700px;
-  margin: 0 auto;
+  font-weight: 400;
+  /* margin: 0 auto; */
 }
 
 /* Responsive styles */
 @media (max-width: 768px) {
+  .monogram-press-container {
+    height: 50vh;
+  }
+
+
+
   .monogram-press-content h1 {
-    font-size: 2rem;
+    font-size: 1rem;
+    font-weight: 800;
   }
 
   .monogram-press-content p {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
 @media (max-width: 425px) {
   .monogram-press-content h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .monogram-press-content p {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
   }
 }
